<resources>
    <string name="app_name">SmartList</string>
    <string name="algorithm_q">How does the algorithm work?</string>
    <string name="algorithm_help">The algorithm keeps track of how many times you\'ve bought the item, as
        well as how many trips you\'ve made since that item was first added to one of your lists, and
        calculates how often you buy it using that. As you make more trips and it gathers more data,
        its accuracy increases.\n</string>
    <string name="frequency_q">Some items I bought recently are being suggested every time I open the app.
        What\'s up with that?</string>
    <string name="frequency_help">That\'s because the app hasn\'t had long enough to learn how often you
        actually want to buy that item. Generally speaking, you\'ll have to give it three or four weeks
        for it to learn how frequently it should be suggesting the new item.\n</string>
    <string name="red_X_q">What are the trash cans for on the shopping list?</string>
    <string name="red_X_help">That\'s for if you decide you don\'t need that item after all. That way, the
        predictive algorithm that guesses if you want to buy the item in future weeks won\'t accidentally
        take into account you buying an item when you actually didn\'t.\n</string>
    <string name="one_time_q">What if I\'m making a one-time purchase?</string>
    <string name="one_time_help">If you don\'t want an item to be suggested again, you can do two things
        to prevent it. First, during your shopping trip, if you hit the trash can by that item instead of
        the checkbox, then the algorithm will treat it as if you didn\'t buy the item and won\'t include
        it in the items to suggest. If you accidentally hit the checkbox, you can go to the \"Previously
        bought items\" section and remove that item from the database.\n</string>
    <string name="remove_item_q">Do old items ever get deleted automatically?</string>
    <string name="remove_item_help">Yes. If you go for more than a certain number of weeks without buying
        a saved item, the algorithm will assume it was a one-time purchase and will delete it from the
        database. The default is 6 weeks, but you can modify that in Settings.\n</string>
    <string name="drawer_shopping_list">Shopping List</string>
    <string name="drawer_prev_items">Previous Items</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_help">Help</string>
    <string name="prev_item">Item</string>
    <string name="prev_list">List</string>
    <string name="prev_frequency">Reminder every:</string>
    <string name="add_new_item">add a new item&#x2026;</string>
    <string name="done_shopping">I\'m done shopping</string>
    <string name="settings_expire">Items expire in: </string>
    <string name="settings_weeks"> weeks</string>
    <string name="settings_reminders">Item reminders: </string>
    <string name="suggestions_header">You haven\'t bought these items in a while.\nWould you like to add them to the list?</string>
    <string name="suggestions_checked">Keep Checked</string>
    <string name="suggestions_reject">Reject All</string>
    <string name="edit_hint">enter an item name</string>
    <string name="list_hint">enter a list name</string>
    <string name="one_time">This is a one-time trip</string>
    <string name="add_list">Add List</string>
    <string name="cancel">Cancel</string>
</resources>
