<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/leftSideGuideline"
        app:layout_constraintGuide_percent=".1"/>
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/cancelGuideline"
        app:layout_constraintGuide_percent=".6"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/nameView"
        android:hint="@string/list_hint"
        android:textColorHint="#BBBBBB"
        android:importantForAutofill="no"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/leftSideGuideline"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/databaseBox"
        android:buttonTint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@id/leftSideGuideline"
        app:layout_constraintTop_toBottomOf="@id/nameView"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_time"
        android:textSize="8pt"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@id/databaseBox"
        app:layout_constraintTop_toTopOf="@id/databaseBox"
        app:layout_constraintBottom_toBottomOf="@id/databaseBox"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addButton"
        android:text="@string/add_list"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/databaseBox"
        app:layout_constraintStart_toStartOf="@id/leftSideGuideline"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/databaseBox"
        app:layout_constraintStart_toStartOf="@id/cancelGuideline"/>

</android.support.constraint.ConstraintLayout>