<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SuggestionFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggestions_header"
        android:id="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/suggestionList"
        app:layout_constraintHeight_max="455dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/header"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/suggestionList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/keepChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestions_checked"/>
        <Button
            android:id="@+id/rejectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestions_reject"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>