<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemsFragment">
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/leftSideGuideline"
        app:layout_constraintGuide_percent=".05"/>
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/middleLeftGuideline"
        app:layout_constraintGuide_percent=".36"/>
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/middleRightGuideline"
        app:layout_constraintGuide_percent=".62"/>
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rightSideGuideline"
        app:layout_constraintGuide_percent=".95"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_item"
        android:id="@+id/header"
        app:layout_constraintStart_toStartOf="@id/leftSideGuideline"
        app:layout_constraintEnd_toEndOf="@id/middleLeftGuideline" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_list"
        app:layout_constraintStart_toStartOf="@id/middleLeftGuideline"
        app:layout_constraintEnd_toEndOf="@id/middleRightGuideline"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_frequency"
        app:layout_constraintEnd_toStartOf="@id/rightSideGuideline"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemsList"
        app:layout_constraintStart_toStartOf="@id/leftSideGuideline"
        app:layout_constraintTop_toBottomOf="@id/header"/>

</android.support.constraint.ConstraintLayout>